--- a/src/styles/global/_default.scss
+++ b/src/styles/global/_default.scss
@@ -115,23 +115,23 @@ $export-ui-classes: true !default;
   }
 
   // additional palette values
-  --narrative-heading-color: transparentize(rgb(255, 255, 255), 0.3);
-  --narrative-heading-bg-hover : transparentize(rgb(22, 21, 43), 0.85);
-  --narrative-border-bottom-color: transparentize(rgb(22, 21, 43), 0.85);
+  --narrative-heading-color: #{transparentize(rgb(255, 255, 255), 0.3)};
+  --narrative-heading-bg-hover : #{transparentize(rgb(22, 21, 43), 0.85)};
+  --narrative-border-bottom-color: #{transparentize(rgb(22, 21, 43), 0.85)};
 
-  --node-outer-trim-stroke: transparentize(rgb(255, 255, 255), .75);
-  --node-bucket-bg: radial-gradient( ellipse at center, transparentize(rgb(45, 41, 85), .5) 0%, transparentize(rgb(58, 58, 117), .5) 100%);
-  --node-list-action-bg: transparentize(rgb(58, 58, 117), .5);
+  --node-outer-trim-stroke: #{transparentize(rgb(255, 255, 255), .75)};
+  --node-bucket-bg: #{radial-gradient( ellipse at center, transparentize(rgb(45, 41, 85), .5) 0%, transparentize(rgb(58, 58, 117), .5) 100%)};
+  --node-list-action-bg: #{transparentize(rgb(58, 58, 117), .5)};
 
-  --drop-shadow-color: transparentize(rgb(22, 21, 43), .25);
+  --drop-shadow-color: #{transparentize(rgb(22, 21, 43), .25)};
 
-  --modal-overlay-bg-color: transparentize(rgb(22, 21, 43), .05);
-  --modal-window-box-shadow: transparentize(rgb(22, 21, 43), .25);
+  --modal-overlay-bg-color: #{transparentize(rgb(22, 21, 43), .05)};
+  --modal-window-box-shadow: #{transparentize(rgb(22, 21, 43), .25)};
 
-  --panel-selected-node-bg-color: transparentize(rgb(255, 255, 255), .95);
+  --panel-selected-node-bg-color: #{transparentize(rgb(255, 255, 255), .95)};
 
-  --menu-item-hover: darken(rgb(0, 201, 162), 5%);
-  --menu-item-hover-settings: darken(rgb(107, 114, 236), 5%);
+  --menu-item-hover: #{darken(rgb(0, 201, 162), 5%)};
+  --menu-item-hover-settings: #{darken(rgb(107, 114, 236), 5%)};
 }
 
 // to export out into css modules for js
