Changing buttons to use rem.

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -46,7 +46,7 @@
     &--small {
       min-width: inherit;
       min-height: inherit;
-      padding: 2em 0;
+      padding: 1.35rem 0;
       font-size: 12px;
 
       > .button__content {
