--- a/src/styles/global/core/_color.scss
+++ b/src/styles/global/core/_color.scss
@@ -11,21 +11,19 @@ $-color-alpha-map: (.1, .15, .3, .6, .7, .8, 1) !default;
 
 @function color($color-name, $alpha: 1, $use-mapped-value: false) {
   $color: #fff;
-  @if $use-mapped-value==true {
-    @if index($-color-alpha-map, $alpha)==null {
+  @if $use-mapped-value == true {
+    @if index($-color-alpha-map, $alpha) == null {
       @warn 'color: Only use #{$-color-alpha-map} for alpha values.';
     }
 
     @if map-has-key($-color-map, $color-name) {
       $color: map-get($-color-map, $color-name);
       @return rgba($color, $alpha);
-    }
-
-    @else {
+    } @else {
       @return $color;
     }
   } @else {
-    @return var(--color-#{$color-name})
+    @return var(--color-#{$color-name});
   }
 }
 
