--- a/src/styles/components/_all.scss
+++ b/src/styles/components/_all.scss
@@ -1,8 +1,8 @@
-@import "button";
-@import "spinner";
-@import "icons";
-@import "inputs";
-@import "sidemenu";
-@import "node";
-@import "expandable";
-@import "narrative-panel";
+@import 'button';
+@import 'spinner';
+@import 'icons';
+@import 'inputs';
+@import 'sidemenu';
+@import 'node';
+@import 'expandable';
+@import 'narrative-panel';
