--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -19,7 +19,7 @@
   $input-class: 'input'
 ) {
   .#{$input-class} {
-    -webkit-appearance: none;
+    -webkit-appearance: none; // sass-lint:disable-line no-vendor-prefixes
     border: 0;
     background: none;
     position: relative;
@@ -53,10 +53,10 @@
         margin-top: 30px;
         padding: 20px 20px 0;
 
-        > svg[name=error] {
+        > svg[name='error'] {
           height: 100%;
           margin-right: 10px;
-          padding-top: 0px;
+          padding-top: 0;
           width: 100px;
         }
 
@@ -100,7 +100,7 @@
           border-right-color: palette('background');
           border-left: 0;
           left: -15px; /* To the left of the tooltip */
-          margin-left: 0px;
+          margin-left: 0;
           top: calc(50% - 15px);
         }
       }
@@ -134,13 +134,18 @@
   .#{$text-class} {
     @include default-input-type;
 
-    -webkit-appearance: none;
+    -webkit-appearance: none; // sass-lint:disable-line no-vendor-prefixes
     border: 0;
     background: none;
     position: relative;
     width: 100%;
     height: 100%;
-    &:focus, &:active {
+    font-family: inherit;
+    color: color('white');
+    border-bottom: 1px solid color('white');
+
+    &:focus,
+    &:active {
       outline: 0;
 
       & + * .#{$text-class}__label {
@@ -159,23 +164,18 @@
         position: absolute;
         top: 0;
         left: 0;
-
-        transition: all 250ms ease-in-out;
+        transition: scale 250ms ease-in-out, translate 250ms ease-in-out;
         transform: scale(1) translate(0, 0);
-        transform-origin: left top 0px;
+        transform-origin: left top 0;
         pointer-events: none;
         user-select: none;
         z-index: 1;
       }
+
       .input__label--active {
         transform: scale(.6) translate(0, 60px);
       }
     }
-
-
-    font-family: inherit;
-    color: color('white');
-    border-bottom: 1px solid color('white');
   }
 }
 
@@ -199,33 +199,35 @@
       display: flex;
       align-items: center;
 
-      &:before {
+      &::before {
         content: '';
         background: transparent;
-        border: 1px solid color('white', 0.7);
+        border: 1px solid color('white', .7);
         display: inline-block;
         width: $checkbox-button-size;
         height: $checkbox-button-size;
         margin-right: 1em;
         vertical-align: top;
         cursor: pointer;
-        transition: all 250ms ease;
+        transition: all 250ms ease; //sass-lint:disable-line no-transition-all
       }
     }
 
     &:checked {
       + .#{$checkbox-class}__label {
         color: color('white');
-        &:before {
+
+        &::before {
           background-color: color('sea-green');
           box-shadow: inset 0 0 0 4px color('navy-taupe');
         }
       }
     }
 
-    &:focus, &:hover {
+    &:focus,
+    &:hover {
       + .#{$checkbox-class}__label {
-        &:before {
+        &::before {
           outline: none;
           border-color: color('sea-green');
         }
@@ -234,10 +236,10 @@
 
     &:disabled {
       + .#{$checkbox-class}__label {
-        &:before {
+        &::before {
           box-shadow: inset 0 0 0 4px color('white');
-          border-color: color('white', 0.7);
-          background: color('white', 0.7);
+          border-color: color('white', .7);
+          background: color('white', .7);
         }
       }
     }
@@ -269,35 +271,38 @@
       display: flex;
       align-items: center;
       padding-right: 1em;
-      color: color('white', 0.7);
-      &:before {
+      color: color('white', .7);
+
+      &::before {
         content: '';
         background: transparent;
         border-radius: 100%;
-        border: 1px solid color('white', 0.7);
+        border: 1px solid color('white', .7);
         display: inline-block;
         width: $radio-button-size;
         height: $radio-button-size;
         margin-right: 1em;
         vertical-align: top;
         cursor: pointer;
-        transition: all 250ms ease;
+        transition: all 250ms ease; // sass-lint:disable-line no-transition-all
       }
     }
 
     &:checked {
       + .#{$radio-class}__label {
         color: color('white');
-        &:before {
+
+        &::before {
           background-color: color('sea-green');
           box-shadow: inset 0 0 0 4px color('navy-taupe');
         }
       }
     }
 
-    &:focus, &:hover {
+    &:focus,
+    &:hover {
       + .#{$radio-class}__label {
-        &:before {
+        &::before {
           outline: none;
           border-color: color('sea-green');
         }
@@ -306,10 +311,11 @@
 
     &:disabled {
       + .#{$radio-class}__label {
-        &:before {
+
+        &::before {
           box-shadow: inset 0 0 0 4px color('white');
-          border-color: color('white', 0.7);
-          background: color('white', 0.7);
+          border-color: color('white', .7);
+          background: color('white', .7);
         }
       }
     }
@@ -336,6 +342,7 @@
 
       position: relative;
       padding-right: 1em;
+
       .input__label {
         position: static;
         cursor: pointer;
@@ -347,6 +354,7 @@
           display: inline-block;
           margin: .5em 1.5em 0 2em;
         }
+
         .input__label-wrapper {
           display: inline;
         }
@@ -363,22 +371,22 @@
     &__button {
       position: absolute;
       cursor: pointer;
-      background-color: transparent;
-      border: 1px solid #ccc;
+      background-color: palette('light-background');
       border-radius: $toggle-height;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      &:before {
+
+      &::before {
         position: absolute;
-        content: "";
+        content: '';
         border-radius: 50%;
         height: $switch-size;
         width: $switch-size;
         left: $switch-size * -.5;
         top: $switch-size * -.25;
-        background-color: white;
+        background-color: palette('text');
         transition: .4s;
       }
     }
@@ -392,7 +400,7 @@
         }
       }
 
-      &:before {
+      &::before {
         transform: translateX($switch-size * 1.5);
       }
     }
@@ -437,7 +445,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      transition: all var(--animation-duration-standard) var(--animation-easing);
+      transition: all var(--animation-duration-standard) var(--animation-easing); //sass-lint:disable-line no-transition-all
 
       @each $color-name, $color-group in $-color-map {
         @include modifier($color-name) {
@@ -445,8 +453,8 @@
         }
       }
 
-      &:after {
-        transition: all var(--animation-duration-standard) var(--animation-easing);
+      &::after {
+        transition: all var(--animation-duration-standard) var(--animation-easing); //sass-lint:disable-line no-transition-all
         position: absolute;
         top: 6%;
         left: 6%;
@@ -467,15 +475,15 @@
     &:hover + .#{$context-class}__button {
       background-color: transparent;
 
-      &:after {
-        transition: all var(--animation-duration-standard) var(--animation-easing);
+      &::after {
+        transition: all var(--animation-duration-standard) var(--animation-easing); //sass-lint:disable-line no-transition-all
         opacity: 1;
         background-color: color('sea-green');
       }
 
       @each $color-name, $color-group in $-color-map {
         @include modifier($color-name) {
-          &:after {
+          &::after {
             background-color: color($color-name);
           }
         }
