--- a/src/styles/components/_node.scss
+++ b/src/styles/components/_node.scss
@@ -7,20 +7,22 @@
 
 @keyframes linking {
   0% {
-    transform:scale(0.8);
+    transform: scale(.8);
   }
+
   50% {
-    transform:scale(1.1);
+    transform: scale(1.1);
   }
+
   100% {
-    transform:scale(0.8);
+    transform: scale(.8);
   }
 }
 
 .node {
   cursor: pointer;
   position: relative;
-  overflow:visible;
+  overflow: visible;
   margin: 0;
   font-size: var(--base-node-size);
   width: 1em;
@@ -31,17 +33,17 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    overflow:visible;
+    overflow: visible;
   }
 
   &__node-base {
-    fill: palette('node-base');
     @include palette-modifiers($include-fill: true);
+    fill: palette('node-base');
   }
 
   &__node-flash {
-    fill: palette('node-dark');
     @include palette-modifiers($include-fill: true);
+    fill: palette('node-dark');
   }
 
   &__node-trim {
@@ -76,27 +78,34 @@
       align-items: center;
       flex-wrap: nowrap;
       text-align: center;
-      font-size: 0.1em;
+      font-size: .1em;
+
       &.len-1 {
-        font-size:0.35em;
+        font-size: .35em;
       }
+
       &.len-2 {
-        font-size:0.25em;
+        font-size: .25em;
       }
+
       &.len-3 {
-        font-size:0.22em;
+        font-size: .22em;
       }
+
       &.len-4 {
-        font-size:0.2em;
+        font-size: .2em;
       }
+
       &.len-5 {
-        font-size:0.15em;
+        font-size: .15em;
       }
+
       &.len-6 {
-        font-size:0.125em;
+        font-size: .125em;
       }
+
       &.len-7 {
-        font-size:0.12em;
+        font-size: .12em;
       }
     }
   }
