--- a/src/styles/components/_sidemenu.scss
+++ b/src/styles/components/_sidemenu.scss
@@ -10,8 +10,8 @@
     background-color: color('white');
     position: absolute;
     visibility: hidden;
-    transform: translate3d(-100%,0,0);
-    transition: all var(--animation-duration-standard);
+    transform: translate3d(-100%, 0, 0);
+    transition: translate var(--animation-duration-standard);
 
     &__heading {
       @include typography('title-1');
@@ -34,7 +34,7 @@
 
     &--visible {
       visibility: visible;
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
     }
   }
 }
@@ -47,6 +47,7 @@
   $added-class: 'pushed'
 ) {
   transition: transform var(--animation-duration-standard);
+
   &--#{$added-class} {
     transform: translate3d(25%, 0, 0);
   }
