--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -53,7 +53,7 @@
         margin-top: 30px;
         padding: 20px 20px 0;
 
-        > svg[name='error'] {
+        > [name='error'] {
           height: 100%;
           margin-right: 10px;
           padding-top: 0;
