add relative node sizing and input background color

--- a/styles/components/_inputs.scss
+++ b/styles/components/_inputs.scss
@@ -373,7 +373,7 @@
     &__button {
       position: absolute;
       cursor: pointer;
-      background-color: palette('light-background');
+      background-color: palette('input-background');
       border-radius: $toggle-height;
       top: 0;
       left: 0;
