--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -134,6 +134,8 @@ $system-font-stack: 'system-ui', sans-serif;
 
   --drop-shadow-color: #{transparentize(rgb(22, 21, 43), .25)};
 
+  --input-background: #{transparentize(rgb(255, 255, 255), .5)};
+
   --modal-overlay: #{transparentize(rgb(0, 0, 0), .2)};
   --modal-window-box-shadow: #{transparentize(rgb(22, 21, 43), .25)};
 
