--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -14,38 +14,40 @@ $export-ui-classes: true !default;
 
 // Default Color Settings
 // =============================================================================
-@include color-set('neon-coral', rgb(226, 33, 91));
-@include color-set('neon-coral--dark', rgb(206, 28, 84));
-@include color-set('mustard', rgb(242, 183, 0));
-@include color-set('mustard--dark', rgb(219, 165, 0));
-@include color-set('sea-green', rgb(0, 201, 162));
-@include color-set('sea-green--dark', rgb(0, 160, 129));
-@include color-set('white', rgb(255, 255, 255));
-@include color-set('slate-blue', rgb(107, 114, 236));
-@include color-set('slate-blue--dark', rgb(85, 91, 188));
-@include color-set('navy-taupe', rgb(45, 41, 85));
-@include color-set('cyber-grape', rgb(58, 58, 117));
-@include color-set('rich-black', rgb(22, 21, 43));
-@include color-set('charcoal', rgb(109, 111, 118));
-@include color-set('platinum', rgb(242, 246, 247));
-@include color-set('platinum--dark', rgb(218, 227, 229));
-@include color-set('sea-serpent', rgb(15, 178, 226));
-@include color-set('sea-serpent--dark', rgb(15, 163, 206));
-@include color-set('purple-pizazz', rgb(211, 15, 239));
-@include color-set('purple-pizazz--dark', rgb(191, 12, 216));
-@include color-set('paradise-pink', rgb(255, 58, 140));
-@include color-set('paradise-pink--dark', rgb(232, 53, 124));
-@include color-set('cerulean-blue', rgb(15, 112, 255));
-@include color-set('cerulean-blue--dark', rgb(15, 102, 232));
-@include color-set('kiwi', rgb(112, 191, 84));
-@include color-set('kiwi--dark', rgb(102, 173, 76));
-@include color-set('neon-carrot', rgb(247, 137, 30));
-@include color-set('neon-carrot--dark', rgb(224, 124, 28));
-@include color-set('barbie-pink', rgb(237, 0, 140));
-@include color-set('barbie-pink--dark', rgb(214, 0, 127));
-@include color-set('tomato', rgb(232, 45, 63));
-@include color-set('tomato--dark', rgb(211, 43, 58));
+@include color-set('neon-coral', '226, 33, 91');
+@include color-set('neon-coral--dark', '206, 28, 84');
+@include color-set('mustard', '242, 183, 0');
+@include color-set('mustard--dark', '219, 165, 0');
+@include color-set('sea-green', '0, 201, 162');
+@include color-set('sea-green--dark', '0, 160, 129');
+@include color-set('white', '255, 255, 255');
+@include color-set('slate-blue', '107, 114, 236');
+@include color-set('slate-blue--dark', '85, 91, 188');
+@include color-set('navy-taupe', '45, 41, 85');
+@include color-set('cyber-grape', '58, 58, 117');
+@include color-set('rich-black', '22, 21, 43');
+@include color-set('charcoal', '109, 111, 118');
+@include color-set('platinum', '242, 246, 247');
+@include color-set('platinum--dark', '218, 227, 229');
+@include color-set('sea-serpent', '15, 178, 226');
+@include color-set('sea-serpent--dark', '15, 163, 206');
+@include color-set('purple-pizazz', '211, 15, 239');
+@include color-set('purple-pizazz--dark', '191, 12, 216');
+@include color-set('paradise-pink', '255, 58, 140');
+@include color-set('paradise-pink--dark', '232, 53, 124');
+@include color-set('cerulean-blue', '15, 112, 255');
+@include color-set('cerulean-blue--dark', '15, 102, 232');
+@include color-set('kiwi', '112, 191, 84');
+@include color-set('kiwi--dark', '102, 173, 76');
+@include color-set('neon-carrot', '247, 137, 30');
+@include color-set('neon-carrot--dark', '224, 124, 28');
+@include color-set('barbie-pink', '237, 0, 140');
+@include color-set('barbie-pink--dark', '214, 0, 127');
+@include color-set('tomato', '232, 45, 63');
+@include color-set('tomato--dark', '211, 43, 58');
 
+
+// Palettes
 @include palette-set('primary', color('sea-green'));
 @include palette-set('menu', color('white'));
 @include palette-set('selected', color('white'));
@@ -64,43 +66,65 @@ $export-ui-classes: true !default;
 @include palette-set('headings', color('white'));
 @include palette-set('menu-headings', color('charcoal'));
 @include palette-set('divider', color('platinum--dark'));
-@include palette-set('node-base', color('neon-coral'));
-@include palette-set('node-dark', color('neon-coral--dark'));
-@include palette-set('node-alt-1', color('purple-pizazz'));
-@include palette-set('node-alt-1--dark', color('purple-pizazz--dark'));
-@include palette-set('node-alt-2', color('paradise-pink'));
-@include palette-set('node-alt-2--dark', color('paradise-pink--dark'));
-@include palette-set('node-alt-3', color('barbie-pink'));
-@include palette-set('node-alt-3--dark', color('barbie-pink--dark'));
-@include palette-set('node-alt-4', color('tomato'));
-@include palette-set('node-alt-4--dark', color('tomato--dark'));
-@include palette-set('node-alt-5', color('neon-carrot'));
-@include palette-set('node-alt-5--dark', color('neon-carrot--dark'));
-@include palette-set('node-alt-6', color('mustard'));
-@include palette-set('node-alt-6--dark', color('mustard--dark'));
-@include palette-set('node-alt-7', color('kiwi'));
-@include palette-set('node-alt-7--dark', color('kiwi--dark'));
-@include palette-set('node-alt-8', color('sea-serpent'));
-@include palette-set('node-alt-8--dark', color('sea-serpent--dark'));
-@include palette-set('node-alt-9', color('cerulean-blue'));
-@include palette-set('node-alt-9--dark', color('cerulean-blue--dark'));
-@include palette-set('edge-base', color('mustard'));
-@include palette-set('edge-dark', color('mustard--dark'));
-@include palette-set('edge-alt-1', color('purple-pizazz'));
-@include palette-set('edge-alt-2', color('neon-coral'));
-@include palette-set('edge-alt-3', color('kiwi'));
-@include palette-set('edge-alt-4', color('paradise-pink'));
-@include palette-set('edge-alt-5', color('tomato'));
-@include palette-set('edge-alt-6', color('sea-serpent'));
-@include palette-set('edge-alt-7', color('barbie-pink'));
-@include palette-set('edge-alt-8', color('neon-coral'));
-@include palette-set('edge-alt-9', color('cerulean-blue'));
 @include palette-set('ring', color('cyber-grape'));
 @include palette-set('graph-tooltip', color('charcoal'));
 @include palette-set('graph-data-1', color('sea-green'));
 @include palette-set('graph-data-2', color('slate-blue'));
 @include palette-set('graph-data-3', color('neon-carrot'));
 @include palette-set('graph-data-4', color('sea-serpent'));
+
+
+// Color sequences
+
+// Root sequence
+@include palette-set('primary-color-seq-1', color('neon-coral'));
+@include palette-set('primary-color-seq-2', color('sea-serpent'));
+@include palette-set('primary-color-seq-3', color('purple-pizazz'));
+@include palette-set('primary-color-seq-4', color('neon-carrot'));
+@include palette-set('primary-color-seq-5', color('kiwi'));
+@include palette-set('primary-color-seq-6', color('cerulean-blue'));
+@include palette-set('primary-color-seq-7', color('paradise-pink'));
+@include palette-set('primary-color-seq-8', color('mustard'));
+
+// Edge sequence
+@include palette-set('edge-color-seq-1', color('mustard'));
+@include palette-set('edge-color-seq-2', color('purple-pizazz'));
+@include palette-set('edge-color-seq-3', color('neon-coral'));
+@include palette-set('edge-color-seq-4', color('kiwi'));
+@include palette-set('edge-color-seq-5', color('paradise-pink'));
+@include palette-set('edge-color-seq-6', color('tomato'));
+@include palette-set('edge-color-seq-7', color('sea-serpent'));
+@include palette-set('edge-color-seq-8', color('barbie-pink'));
+@include palette-set('edge-color-seq-9', color('neon-coral'));
+@include palette-set('edge-color-seq-10', color('cerulean-blue'));
+
+// Node Sequence
+@include palette-set('node-color-seq-1', color('neon-coral'));
+@include palette-set('node-color-seq-1--dark', color('neon-coral--dark'));
+@include palette-set('node-color-seq-2', color('sea-serpent'));
+@include palette-set('node-color-seq-2--dark', color('sea-serpent--dark'));
+@include palette-set('node-color-seq-3', color('purple-pizazz'));
+@include palette-set('node-color-seq-3--dark', color('purple-pizazz--dark'));
+@include palette-set('node-color-seq-4', color('neon-carrot'));
+@include palette-set('node-color-seq-4--dark', color('neon-carrot--dark'));
+@include palette-set('node-color-seq-5', color('kiwi'));
+@include palette-set('node-color-seq-5--dark', color('kiwi--dark'));
+@include palette-set('node-color-seq-6', color('cerulean-blue'));
+@include palette-set('node-color-seq-6--dark', color('cerulean-blue--dark'));
+@include palette-set('node-color-seq-7', color('paradise-pink'));
+@include palette-set('node-color-seq-7--dark', color('paradise-pink--dark'));
+@include palette-set('node-color-seq-8', color('mustard'));
+@include palette-set('node-color-seq-8--dark', color('mustard--dark'));
+
+// Ordinal Bin Sequence
+@include palette-set('ord-color-seq-1', color('sea-green'));
+@include palette-set('ord-color-seq-2', color('sea-serpent'));
+@include palette-set('ord-color-seq-3', color('tomato'));
+@include palette-set('ord-color-seq-4', color('neon-carrot'));
+@include palette-set('ord-color-seq-5', color('kiwi'));
+@include palette-set('ord-color-seq-6', color('cerulean-blue'));
+@include palette-set('ord-color-seq-7', color('paradise-pink'));
+@include palette-set('ord-color-seq-8', color('mustard'));
 
 $base-line-height: 1.5;
 $netcanvas-font-stack: 'Quicksand', 'Open Sans', sans-serif;
@@ -113,14 +137,14 @@ $system-font-stack: 'system-ui', sans-serif;
   --body-font-family: #{$system-font-stack};
 
   // each item in color map
-  $spacer: '--'; // Needed because sass doesn't properly support CSS variables.
   @each $name, $color in $-color-map {
-    #{$spacer}color-#{$name}: #{$color};
+    #{'--'}color-#{$name}: #{'rgb('}#{$color}#{')'};
+    #{'--'}color-#{$name}---rgb: #{$color};
   }
 
   // each item in palette
   @each $name, $palette in $-palette-map {
-    #{$spacer}#{$name}: #{$palette};
+    #{'--'}#{$name}: #{$palette};
   }
 
   // additional one-off palette values
@@ -141,7 +165,7 @@ $system-font-stack: 'system-ui', sans-serif;
 
   --panel-selected-node-bg-color: #{transparentize(rgb(255, 255, 255), .95)};
 
-  --panel-bg-muted: rgba(255, 255, 255, .05); //sass-lint:disable-line no-color-literals
+  --panel-bg-muted: #36315f; //sass-lint:disable-line no-color-literals
 
   --menu-item-hover: #{darken(rgb(0, 201, 162), 5%)};
   --menu-item-hover-settings: #{darken(rgb(107, 114, 236), 5%)};
