--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -11,7 +11,11 @@ $icon-large-width: $icon-dimension-base * 4 !default;
 $icon-large-height: $icon-dimension-base * 4 !default;
 
 $-icon-color-modifiers: (
+  'mustard',
+  'neon-coral',
+  'tomato',
   'sea-serpent',
+  'barbie-pink',
   'purple-pizazz',
   'kiwi',
   'cerulean-blue',
