--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -63,6 +63,11 @@
     &--platinum,
     &--platinum--dark {
       color: palette('text-dark');
+
+      // icons
+      .icon .cls-2 {
+        fill: palette('text-dark');
+      }
     }
 
     &__icon {
