--- a/styles/components/_node.scss
+++ b/styles/components/_node.scss
@@ -25,6 +25,7 @@
   width: 1em;
   height: 1em;
   filter: drop-shadow(0 4px 0 var(--drop-shadow-color));
+  display: inline-flex;
 
   &__node {
     width: 100%;
@@ -76,6 +77,8 @@
       flex-wrap: nowrap;
       text-align: center;
       font-size: .1em;
+      font-family: $netcanvas-font-stack;
+      color: palette('text');
 
       &.len-1 {
         font-size: .35em;
