Fix lint warning

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -65,8 +65,10 @@
       color: palette('text-dark');
 
       // icons
-      .icon .cls-2 {
-        fill: palette('text-dark');
+      .icon {
+        .cls-2 {
+          fill: palette('text-dark');
+        }
       }
     }
 
