--- a/styles/components/_inputs.scss
+++ b/styles/components/_inputs.scss
@@ -444,16 +444,16 @@
       background-color: transparent;
       border-radius: 50%;
       padding: 2px;
-      border: 3px solid color('sea-green');
+      border: 3px solid var(--cat-color-seq-1);
 
       display: flex;
       justify-content: center;
       align-items: center;
       transition: all var(--animation-duration-standard) var(--animation-easing); //sass-lint:disable-line no-transition-all
 
-      @each $color-name, $color-group in $-color-map {
-        @include modifier($color-name) {
-          border: 3px solid color($color-name);
+      @for $i from 1 through 5 {
+        &--cat-color-seq-#{$i} {
+          border: 3px solid var(--cat-color-seq-#{$i});
         }
       }
 
@@ -482,13 +482,13 @@
       &::after {
         transition: all var(--animation-duration-standard) var(--animation-easing); //sass-lint:disable-line no-transition-all
         opacity: 1;
-        background-color: color('sea-green');
+        background-color: var(--cat-color-seq-1);
       }
 
-      @each $color-name, $color-group in $-color-map {
-        @include modifier($color-name) {
+      @for $i from 1 through 5 {
+        &--cat-color-seq-#{$i} {
           &::after {
-            background-color: color($color-name);
+            background-color: var(--cat-color-seq-#{$i});
           }
         }
       }
