--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -20,7 +20,8 @@ $-icon-color-modifiers: (
   'kiwi',
   'cerulean-blue',
   'paradise-pink',
-  'slate-blue'
+  'slate-blue',
+  'white',
 ) !default;
 
 @mixin special-icon-colors(
