--- a/styles/components/form/_fields.scss
+++ b/styles/components/form/_fields.scss
@@ -3,8 +3,28 @@
     @include typography(copy-standard, font-size);
     font-weight: 200;
     display: block;
-    margin: 0 0 unit(1);
+    margin: 0;
+    color: var(--input-label);
   }
+}
+
+.form-field-container {
+  margin-bottom: 2em;
+}
+
+.form-field {
+  background: var(--input-background);
+  color: var(--input-text);
+  border-radius: 15px 15px 0 0;
+  margin-bottom: .5em;
+  padding: 1em;
+  width: 100%;
+  min-height: 4em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
 }
 
 @import './fields/contexts';
@@ -12,6 +32,7 @@
 @import './fields/radio-group';
 @import './fields/checkbox';
 @import './fields/checkbox-list';
+@import './fields/toggle';
 @import './fields/select';
 @import './fields/text';
 @import './fields/textarea';
