--- a/styles/components/form/fields/_checkbox.scss
+++ b/styles/components/form/fields/_checkbox.scss
@@ -1,8 +1,8 @@
-$size: unit(2.3);
+$size: 2rem;
 $border: 2px;
 $border-space: 3px;
 
-.form-fields-checkbox {
+.form-field-checkbox {
   display: inline-block;
   cursor: pointer;
 
@@ -23,7 +23,7 @@ $border-space: 3px;
       content: '';
       width: 100%;
       height: 100%;
-      border-color: var(--color-navy-taupe);
+      border-color: var(--input-border);
       border-width: $border;
       border-style: solid;
       transition: border-color var(--animation-easing) var(--animation-duration-standard);
@@ -36,15 +36,13 @@ $border-space: 3px;
       left: $border + $border-space;
       width: calc(100% - #{($border + $border-space) * 2});
       height: calc(100% - #{($border + $border-space) * 2});
-      background-color: var(--architect-ui-radio-dot);
+      background-color: var(--input-radio--fill);
       opacity: 0;
       transition: opacity var(--animation-easing) var(--animation-duration-standard);
     }
   }
 
   &__label {
-    @include typography(copy-standard, font-size);
-    font-weight: 200;
     display: inline-block;
     margin-left: unit(1);
     vertical-align: top;
@@ -52,16 +50,16 @@ $border-space: 3px;
   }
 
   &:hover {
-    .form-fields-checkbox__checkbox {
+    .form-field-checkbox__checkbox {
       &::before {
-        border-color: var(--architect-ui-radio-dot);
+        border-color: var(--input-radio--fill);
       }
     }
   }
 
   &__input:checked + &__checkbox { // sass-lint:disable-line force-pseudo-nesting
     &::before {
-      border-color: var(--architect-ui-radio-border);
+      border-color: var(--input-border);
     }
 
     &::after {
@@ -73,7 +71,7 @@ $border-space: 3px;
     cursor: default;
     pointer-events: none;
 
-    .form-fields-checkbox__checkbox {
+    .form-field-checkbox__checkbox {
       &::before {
         border-color: var(--color-charcoal);
       }
@@ -84,7 +82,7 @@ $border-space: 3px;
     }
 
     &:hover {
-      .form-fields-checkbox__checkbox {
+      .form-field-checkbox__checkbox {
         &::before {
           border-color: var(--color-charcoal);
         }
