--- a/styles/components/form/fields/_radio.scss
+++ b/styles/components/form/fields/_radio.scss
@@ -1,8 +1,8 @@
-$size: unit(2.5);
+$size: 2rem;
 $border: 2px;
 $border-space: 3px;
 
-.form-fields-radio {
+.form-field-radio {
   display: inline-block;
   cursor: pointer;
 
@@ -24,7 +24,7 @@ $border-space: 3px;
       width: 100%;
       height: 100%;
       border-radius: 100%;
-      border-color: var(--color-navy-taupe);
+      border-color: var(--input-border);
       border-width: $border;
       border-style: solid;
       transition: border-color var(--animation-easing) var(--animation-duration-standard);
@@ -38,7 +38,7 @@ $border-space: 3px;
       width: calc(100% - #{($border + $border-space) * 2});
       height: calc(100% - #{($border + $border-space) * 2});
       border-radius: 100%;
-      background-color: var(--architect-ui-radio-border);
+      background-color: var(--input-accent);
       opacity: 0;
       transition: opacity var(--animation-easing) var(--animation-duration-standard);
     }
@@ -54,16 +54,16 @@ $border-space: 3px;
   }
 
   &:hover {
-    .form-fields-radio__radio {
+    .form-field-radio__radio {
       &::before {
-        border-color: var(--architect-ui-radio-border);
+        border-color: var(--input-border);
       }
     }
   }
 
   &__input:checked + &__radio { // sass-lint:disable-line force-pseudo-nesting
     &::before {
-      border-color: var(--architect-ui-radio-dot);
+      border-color: var(--input-accent);
     }
 
     &::after {
@@ -75,9 +75,9 @@ $border-space: 3px;
     cursor: default;
     pointer-events: none;
 
-    .form-fields-radio__radio {
+    .form-field-radio__radio {
       &::before {
-        border-color: var(--color-charcoal);
+        border-color: var(--input-disabled);
       }
 
       &::after {
@@ -86,9 +86,9 @@ $border-space: 3px;
     }
 
     &:hover {
-      .form-fields-radio__radio {
+      .form-field-radio__radio {
         &::before {
-          border-color: var(--color-charcoal);
+          border-color: var(--input-disabled);
         }
 
         &::after {
