--- a/styles/components/form/fields/_text.scss
+++ b/styles/components/form/fields/_text.scss
@@ -1,39 +1,26 @@
-$module-name: form-fields-text;
+$module-name: form-field-text;
 
 .#{$module-name} {
   @include form-field;
   display: block;
   position: relative;
+  padding: 0.5em 1em;
 
   &__input {
     @include typography('copy-large', font-size);
     background-color: transparent;
-    width: calc(100% - #{unit(3)});
+    width: 100%;
+    color: var(--input-text);
     border: 0;
-    border-bottom-width: unit(.2);
+    padding: 1em 0 .5em;
+    border-bottom-width: unit(.25);
     border-bottom-style: solid;
-    border-bottom-color: var(--color-platinum);
+    border-bottom-color: transparent;
     transition: border-bottom-color var(--animation-easing) var(--animation-duration-standard);
 
     &::placeholder {
-      color: var(--architect-input-placeholder);
-    }
-  }
-
-  &__icon {
-    position: absolute;
-    top: 0;
-    right: 0;
-    vertical-align: bottom;
-    width: unit(2) !important; // sass-lint:disable-line no-important
-    height: unit(2) !important; // sass-lint:disable-line no-important
-    opacity: 0;
-    transition: opacity var(--animation-easing) var(--animation-duration-standard);
-
-    &--error {
-      .cls-1 {
-        fill: var(--error);
-      }
+      color: var(--input-placeholder);
+      font-style: italic;
     }
   }
 
@@ -41,7 +28,7 @@ $module-name: form-fields-text;
     opacity: 0;
     max-height: 0;
     color: var(--error);
-    margin: unit(.5) 0 0;
+    margin: unit(.5) 0 unit(.5) 0;
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
   }
@@ -49,7 +36,7 @@ $module-name: form-fields-text;
   &--has-focus,
   &:hover {
     .#{$module-name}__input {
-      border-bottom-color: var(--architect-input-focus);
+      border-bottom-color: var(--input-accent);
     }
 
     .#{$module-name}__icon--edit {
@@ -59,7 +46,7 @@ $module-name: form-fields-text;
 
   &--has-error {
     .#{$module-name}__input {
-      border-bottom-color: var(--error);
+      border-bottom-color: var(--error) !important;
     }
 
     .#{$module-name}__error {
