--- a/styles/components/form/_fields.scss
+++ b/styles/components/form/_fields.scss
@@ -31,8 +31,9 @@
 @import './fields/radio';
 @import './fields/radio-group';
 @import './fields/checkbox';
-@import './fields/checkbox-list';
+@import './fields/checkbox-group';
 @import './fields/toggle';
+@import './fields/toggle-button';
 @import './fields/select';
 @import './fields/text';
 @import './fields/textarea';
