--- a/styles/components/form/fields/_toggle-button.scss
+++ b/styles/components/form/fields/_toggle-button.scss
@@ -2,7 +2,7 @@ $size: 2rem;
 $border: 2px;
 $border-space: 3px;
 
-.form-field-toggle {
+.form-field-toggle-button {
   display: inline-block;
   cursor: pointer;
 
