--- a/styles/components/form/_fields.scss
+++ b/styles/components/form/_fields.scss
@@ -25,15 +25,21 @@
   justify-content: center;
   align-content: center;
   justify-items: center;
+
+  &__inline {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
-@import './fields/contexts';
 @import './fields/radio';
 @import './fields/radio-group';
 @import './fields/checkbox';
 @import './fields/checkbox-group';
 @import './fields/toggle';
 @import './fields/toggle-button';
+@import './fields/toggle-button-group';
 @import './fields/select';
 @import './fields/text';
 @import './fields/textarea';
